Fixed scrollbar padding CSS definition.

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -11,7 +11,7 @@
     -moz-user-select: none;
     -ms-user-select: none;
     -ms-overflow-style: none;
-    scroll-padding: 120px;
+    scroll-padding-top: 120px;
     scrollbar-width: thin;
     scrollbar-color: var(--bs-secondary);
 }
